# python-slice

./: README.md  pyproject.toml
src/slice_bin/: __main__.py  lib.py
